--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<a href="/"><img src="img/photo-new.jpg" alt="Александр Бурлаков"></a>
 			<h2>Alexander Burlakov</h2>
 			<ul>
-				<li>email: <a href="mailto:a@brlkv.ru?subject=Хочу заказать сайт">a@brlkv.ru</a></li>
+				<li>email: <a href="mailto:im@brlkv.ru?subject=Хочу заказать сайт">im@brlkv.ru</a></li>
 				<li>telegram: <a href="https://telegram.me/a_brlkv">a_brlkv</a></li>
 			</ul>
 		</div>
