--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 
 <body>
 
-	<header>
+	<header class="hat">
 		<div class="container">
-			<a href="/"><img src="img/photo-new.jpg" alt="Александр Бурлаков"></a>
+			<a href="/" class="photo"><img src="img/photo-new.jpg" alt="Александр Бурлаков"></a>
 			<h2>Alexander Burlakov</h2>
 			<ul>
 				<li>email: <a href="mailto:im@brlkv.ru?subject=Хочу заказать сайт">im@brlkv.ru</a></li>
