remove class hat

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-	<header class="hat">
+	<header>
 		<div class="container">
 			<a href="/" class="photo"><img src="img/photo-new.jpg" alt="Александр Бурлаков"></a>
 			<h2>Alexander Burlakov</h2>
