--- a/index.html
+++ b/index.html
@@ -34,11 +34,14 @@
 			<a href="/" class="photo"><img src="img/photo-new.jpg" alt="Александр Бурлаков"></a>
 			<h2>Alexander Burlakov</h2>
 			<ul>
-				<li>email: <a href="mailto:im@brlkv.ru?subject=Хочу заказать сайт">im@brlkv.ru</a></li>
+				<li>email: <a href="mailto:im@brlkv.ru?subject=Сообщение с вашего сайта">im@brlkv.ru</a></li>
 				<li>telegram: <a href="https://telegram.me/a_brlkv">a_brlkv</a></li>
 			</ul>
 		</div>
 	</header>
 
 </body>
+<script>
+	if ((new Date()).getMonth()== 11) document.querySelector('header').classList.add('hat');
+</script>
 </html>
